<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/mainView"
    android:background="@color/white"
    android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/blue"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:text="Mood Test"
            android:gravity="center"
            android:textSize="20dp"
            android:padding="15dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp"
            android:orientation="vertical">
            <TextView
                android:id="@+id/q_count_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/blue"
                android:textStyle="bold"/>
            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.2"
                android:fillViewport="true">
                <LinearLayout
                    android:id="@+id/linear_q"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:orientation="vertical">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/default_round_blur"
                        android:orientation="vertical">
                        <TextView
                            android:id="@+id/q_txt"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="18dp"
                            android:textStyle="bold"
                            android:layout_margin="10dp"
                            android:textColor="@color/blue"/>
                        <RadioGroup
                            android:id="@+id/radio_group"
                            android:layout_below="@+id/text_view_question"
                            android:layout_marginTop="10dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">
                            <RadioButton
                                android:id="@+id/radio_button1"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="5dp"
                                android:text="@string/a1"
                                android:freezesText="true"/>

                            <RadioButton
                                android:id="@+id/radio_button2"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="5dp"
                                android:text="@string/a2"
                                android:freezesText="true"/>

                            <RadioButton
                                android:id="@+id/radio_button3"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="5dp"
                                android:text="@string/a3"
                                android:freezesText="true"/>

                            <RadioButton
                                android:id="@+id/radio_button4"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="5dp"
                                android:text="@string/a4"
                                android:freezesText="true"/>
                            <RadioButton
                                android:id="@+id/radio_button5"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="5dp"
                                android:text="@string/a5"
                                android:freezesText="true"/>
                        </RadioGroup>
                    </LinearLayout>
                </LinearLayout>
            </ScrollView>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="5dp"
                android:orientation="horizontal">
                <Button
                    android:id="@+id/continue_but"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/default_round"
                    android:text="Continue"
                    android:textColor="@color/colorWhite"
                    android:layout_gravity="center"
                    android:textSize="18dp"/>
            </LinearLayout>
        </LinearLayout>
</LinearLayout>